# ComfyUI_ZIM

./: README.md  __init__.py  pyproject.toml  requirements.txt  zim_mask_preprocessing_node.py  zim_nodes.py
.github/workflows/: publish.yml
workflow/: Bbox_zim.json  kijai_points_node_zim.json  positive_and_negative_zim.json  positive_zim.json  zim.json
